updated 51000 to store

--- a/PrologVodOnline_VER06/PrologVodOnline/Info.plist
+++ b/PrologVodOnline_VER06/PrologVodOnline/Info.plist
@@ -32,15 +32,15 @@
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>com.macprolog.admin51004</string>
+	<string>com.macprolog.admin51000</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>SPANISH</string>
+	<string>HEBREW</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>216.9.03</string>
+	<string>216.8.16</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
